add filebeat installation files and refactor to nested util directories